<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountCreationActivity">

    <TextView
        android:id="@+id/accountCreation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="180dp"
        android:gravity="center"
        android:text="@string/account_creation"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/c_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/accountCreation" />

    <EditText
        android:id="@+id/c_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="password"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/c_name" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:text="@string/CreateAccount"
        app:layout_constraintTop_toBottomOf="@id/c_password" />


</androidx.constraintlayout.widget.ConstraintLayout>